🐞 fix: 修复支付bug和添加作者isMember信息
